# datastream-workload

./: Cargo.toml  build.rs  manifest-cdylib.toml  manifest.lock.toml  manifest.toml
protos/: duplex_stream.proto
src/: duplex_stream_service.rs  lib.rs
