[package]
name = "datastream-service"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["DataStreamApp Contributors"]
description = "DuplexStreamService for DataStreamApp dev environment validation"

[lib]
name = "datastream_guest"
crate-type = ["cdylib", "rlib"]

[features]
default = []
cdylib = ["actr-framework/cdylib"]

[dependencies]
actr-framework = { path = "../../actr/core/framework" }
actr-protocol = { path = "../../actr/core/protocol" }
anyhow = "1.0"
async-trait = "0.1"
bytes = "1.10"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["sync", "macros"] }
tracing = "0.1"

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
actr-hyper = { path = "../../actr/core/hyper", features = ["wasm-engine", "test-utils"] }
serde_json = "1.0"
tempfile = "3.23"
